# gan_assign01

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
gan_assign01/: __init__.py  config.py  dataset.py  features.py  plots.py
gan_assign01/modeling/: predict.py  train.py
gan_assign01/modeling/models/: ae.py  vae.py
notebooks/: GANS_01.ipynb
