[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gan_assign01"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "kagglehub>=1.0.0",
    "loguru",
  "matplotlib",
    "mkdocs",
  "numpy",
    "pip",
    "python-dotenv",
    "ruff",
  "tensorflow",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["gan_assign01"]
include = ["pyproject.toml", "gan_assign01/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gan_assign01"]
force-sort-within-sections = true

